Fix Firefox Relay wordmark alignment for l10n (Fixes #12317)

--- a/media/css/products/vpn/components/block.scss
+++ b/media/css/products/vpn/components/block.scss
@@ -554,7 +554,9 @@ $image-path: '/media/protocol/img';
 
         .mzp-c-wordmark {
             display: block;
+            height: 48px;
             margin: 0;
+            width: 220px;
         }
     }
 
